--- a/Stop.tex
+++ b/Stop.tex
@@ -83,29 +83,7 @@ for all jets with $\pt > 50$\gev and $|\eta| < 2.5$. This condition selects even
 \end{equation*} 
 are selected. The value of 0.5 is chosen according to the jet size parameter. However, this is reduced in case of the third jet in order to retain signal efficiency. }
 \end{itemize}
-Since only simulated events are used, no dedicated event cleaning filters are applied as it is necessary for data (cf. Sec~\ref{subsec:RA2_cleaning}). The selection described here is again denoted baseline selection in the following. In Tab.~\ref{tab:stop_baseline_cutflow}, the event yields of background and two signal processes obtained from simulation normalized to an integrated luminosity of 19.5\fbinv are shown after various requirements together with the statistical uncertainty. It is visible that the \met and $\Delta \phi$ requirement reject most of the background events. After the baseline selection the background is composed almost equally of all four SM processes. Furthermore, in Fig.~\ref{fig:stop_baseline}, the obtained spectra of \HT, \met and \NJets after applying the baseline selection are shown for the SM backgrounds and two selected signal points. The signal points represent mass values of 600\gev and 1100\gev for the stop mass while the LSP mass is in both cases 50\gev. These two signal points illustrate the difference in the kinematic properties of events for low and high stop masses. Typically, the \HT and \met spectrum get harder for higher stop masses while the shape of the \NJets spectrum stays nearly unchanged. 
-\begin{table}[!t]
-\fontsize{9 pt}{1.2 em}
-\selectfont
-\centering
-\caption{Event yields and cut flow from MC simulated samples after various requirements described in the text. All numbers are scaled to 19.5\fbinv. Only statistical uncertainties are shown in the table. The signal points are labelled as (X, Y) where X is the top squark mass and Y is the LSP mass in GeV.}
-\makebox[\linewidth]{
-\begin{tabular}{cccccc}
-\multicolumn{6}{c}{} \\
-  \toprule
-   Process & e/$\mu$ veto & jet counting & \HT & \met & $\Delta \phi$  \\
-  \midrule
-   \ttbar & 10712200 $\pm$ 9170 & 6431190 $\pm$ 7105 & 1274570 $\pm$ 3163 & 34616.8 $\pm$ 521.3 & 16444.9 $\pm$ 359.3 \\
-   \WJets & 713523000 $\pm$ 159183000 & 1522960 $\pm$ 20432.5 & 196599 $\pm$ 1259.5 & 25104.5 $\pm$ 295.7 & 12520 $\pm$ 211.6 \\
-   \ZJets & 203002000 $\pm$ 408457 & 364126 $\pm$ 4090.1 & 60043.1 $\pm$ 212.4 & 16245.7 $\pm$ 104.9 & 11858.0 $\pm$ 91.1 \\
-   QCD multijet & $4.96 \cdot 10^{11}$ $\pm$ $6.89 \cdot 10^{8}$ & $1.01 \cdot 10^{10}$ $\pm$ $8.58 \cdot 10^7$ & $4.43 \cdot 1^{8}$ $\pm$ $3.54 \cdot 10^{6}$ & 109456 $\pm$ 19090 & 20013 $\pm$ 18085 \\
-\midrule
-   Signal (600, 50) & 2252.7 $\pm$ 8.8 & 1994.7 $\pm$ 8.3 & 1478.3 $\pm$ 7.1 & 1157.9 $\pm$ 6.3 & 1013.1 $\pm$ 5.9 \\
-   Signal (1100, 50) & 42.9 $\pm$ 0.2 & 37.3 $\pm$ 0.2 & 36.0 $\pm$ 0.1 & 33.2 $\pm$ 0.1 & 29.2 $\pm$ 0.1 \\
-  \bottomrule
-\end{tabular}}
-\label{tab:stop_baseline_cutflow}
-\end{table}    
+Since only simulated events are used, no dedicated event cleaning filters are applied as it is necessary for data (cf. Sec~\ref{subsec:RA2_cleaning}). The selection described here is again denoted baseline selection in the following. In Fig.~\ref{fig:stop_baseline}, the obtained spectra of \HT, \met and \NJets after applying the baseline selection are shown for the SM backgrounds and two selected signal points normalized to an integrated luminosity of 19.5\fbinv. The signal points represent mass values of 600\gev and 1100\gev for the stop mass while the LSP mass is in both cases 50\gev. These two signal points illustrate the difference in the kinematic properties of events for low and high stop masses. Typically, the \HT and \met spectrum get harder for higher stop masses while the shape of the \NJets spectrum stays nearly unchanged. After applying baseline selection criteria, the background is composed almost equally of all four SM processes (\ttbar: 27\%, \WJets: 21\%, \ZJets:19\%, QCD: 33\%).
 \begin{figure}[!t]
   \centering
   % \makebox[\linewidth]{
@@ -138,8 +116,9 @@ In order to investigate how this baseline selection can be further improved to g
   \caption{Evolution of the signal versus background efficiency for a stop mass of 600\gev (\textit{top}) and 1100\gev (\textit{bottom}) where the background is the sum of all backgrounds (\textit{left}) or only the \ttbar background (\textit{right}).}
   \label{fig:stop_baseline_cutscan_ht_met_mht_njets}
 \end{figure}
-for the number of signal and background events, respectively. In Fig.~\ref{fig:stop_baseline_cutscan_ht_met_mht_njets}, the development of the signal versus background efficiencies is shown for the stop mass 600\gev and 1100\gev signal points and \ttbar as well as total background events. The curves are obtained from increasing the cut value for the denoted variable by keeping the selection for all other variables fixed. The curve of a variable with good separation power runs close to the lower right corner. Here, the performance of \HT, \met and \NJets is compared. %In addition to \met, also \MHT, as defined in Sec.~\ref{subsec:RA2_baseline}, is shown in this comparison. Both variables show a very similar performance such that in principle both variables could be employed with similar results. However, the performance of \met seems to be slightly better and thus this variable is used in these studies rather than \MHT. Furthermore, as stated above, the same trigger as for the analysis presented in Chapter~\ref{chap:RA2} could be used to collect the data. Since this trigger is based on \met, the choice of the offline selections is closer to the online definition when using \met instead of \MHT.
-As can be seen in Fig.~\ref{fig:stop_baseline_cutscan_ht_met_mht_njets}, \met shows in general the best performance when comparing these variables. This holds for low and high stop masses as well as for the total background and when considering \ttbar background only. Furthermore, also \HT provides a good separation power and is only in case of the stop mass of 600~\gev inferior to \NJets when considering the total background. However, when only \ttbar background is considered, the jet multiplicity is not suitable as discriminating variable since the \NJets spectra of signal and \ttbar background are almost identical. As in general the kinematic features of \ttbar background are closest to the signal, it is of special importance to identify selections that can reduce this background. Consequently, \met and \HT are the preferred variables to distinguish signal and background processes. \\
+for the number of signal and background events, respectively. In Fig.~\ref{fig:stop_baseline_cutscan_ht_met_mht_njets}, the evolution of the signal versus background efficiencies is shown for the stop mass 600\gev and 1100\gev signal points and \ttbar as well as total background events. The curves are obtained from increasing the cut value for the denoted variable by keeping the selection for all other variables fixed. The curve of a variable with good separation power runs close to the lower right corner. Here, the performance of \HT, \met and \NJets is compared. %In addition to \met, also \MHT, as defined in Sec.~\ref{subsec:RA2_baseline}, is shown in this comparison. Both variables show a very similar performance such that in principle both variables could be employed with similar results. However, the performance of \met seems to be slightly better and thus this variable is used in these studies rather than \MHT. Furthermore, as stated above, the same trigger as for the analysis presented in Chapter~\ref{chap:RA2} could be used to collect the data. Since this trigger is based on \met, the choice of the offline selections is closer to the online definition when using \met instead of \MHT.
+As can be seen in Fig.~\ref{fig:stop_baseline_cutscan_ht_met_mht_njets}, \met shows in general the best performance when comparing these variables. This holds for low and high stop masses as well as for the total background and when considering \ttbar background only. Furthermore, also \HT provides a good separation power and is only in case of the stop mass of 600~\gev inferior to \NJets when considering the total background. However, when only \ttbar background is considered, the jet multiplicity is not suitable as discriminating variable since the \NJets spectra of signal and \ttbar background are almost identical. As in general the kinematic features of \ttbar background are closest to the signal, it is of special importance to identify selections that can reduce this background. Consequently, \met and \HT are the preferred variables to distinguish signal and background processes. 
+\\
 In the following, an analysis strategy close to the one described in Chap.~\ref{chap:RA2} is pursued. Events selected with the baseline selection are further categorized according to their \HT and \met values in exclusive search regions shown in Tab.~\ref{tab:stop_excl_search_bins}. 
 \begin{table}[!t]
 %\fontsize{10 pt}{1.2 em}
@@ -159,17 +138,41 @@ In the following, an analysis strategy close to the one described in Chap.~\ref{
   \bottomrule
 \end{tabular}
 \label{tab:stop_excl_search_bins}
-\end{table}    
-\\ 
-In this study, the sensitivity of a certain selection is quantified by determining the expected exclusion reach. In order to do this, the uncertainties of the individual background processes have to be considered. These are not explicitly determined but chosen in correspondence to the uncertainties obtained for similar kinematic regimes in SUS-13-015. The respective uncertainties considered for the different processes are
+\end{table}  
+The event yields of background and two signal processes obtained after applying baseline requirements are shown for these different signal regions as well as for the total selected sample in Tab.~\ref{tab:stop_baseline_cutflow}. Furthermore, also the signal over background ratios are displayed. In general, the signal to background ratio in SR1 is very low such that this bin is not expected to contribute to the search sensitivity significantly, but can be used to constrain the background estimate. As seen already from the signal versus background efficiency curves, the best discrimination between signal and background events can be obtained by selecting high values of \met (SR2 and SR4), while the overall best sensitivity is given when combining the high \met selection also with the high \HT selection (SR4). However, the signal to background ratios in all search regions are so low that it is not expected to be able to really probe the considered stop mass scenarios with such a basic selection. \\ 
+\\
+In order to get an even better estimate of the search sensitivity than from the signal to background ratios of the individual search bins, the sensitivity of a certain selection is quantified by determining the expected exclusion reach. While the signal to background ratios are useful to get a general impression of the selection quality, the expected exclusion reach combines the information from all search bins and thus provides a more accurate estimate of the search sensitivity. Thus, it is used in the following to quantify the quality of a certain selection and compare it to others. In order to determine this exclusion reach, the uncertainties of the individual background processes have to be considered. These are not explicitly estimated but chosen in correspondence to the uncertainties obtained for similar kinematic regimes in SUS-13-015. The respective uncertainties considered for the different processes are
 \begin{itemize}
  \item QCD multijet events: 100\%
  \item \ZJets: 50\%
  \item \WJets: 20\%
  \item \ttbar: 20\% + additional 20\% in the high \met search regions
 \end{itemize}  
-which are meant to be total uncertainties such that the actual statistical uncertainty of the number of simulated MC events is not considered explicitly. \\
-Based on the selected event yields and the estimated uncertainties, the 95\% confidence-level expected upper limit is calculated as an asymptotic $\mathrm{CL_s}$ limit~\cite{bib:theta}. The obtained exclusion curve is shown in Fig.~\ref{fig:stop_baseline_limit} for the signal strength $\mu$ which is the excluded production cross section divided by the theoretical cross section for direct stop production as a function of the stop quark mass. The LSP mass is fixed to 50\gev in order to study the sensitivity of the selection for signal scenarios with large mass splittings between stop and neutralino mass. A particular mass point can be excluded if the expected limit drops below one. However, it turns out that this baseline selection cuts and the subsequent binning in exclusive search regions is not yet sensitive enough to probe any of the selected mass points. Thus, possible improvements of the analysis are discussed in the following sections.  
+which are meant to be total uncertainties such that the actual statistical uncertainty of the number of simulated MC events is not considered explicitly. 
+\begin{table}[!t]
+\fontsize{9 pt}{1.2 em}
+\selectfont
+\centering
+\caption{Total event yields obtained from simulated samples after the baseline selection described in the text (\textit{first column}) as well as event yields for the various signal regions (\textit{column two to five}). All numbers are scaled to 19.5\fbinv. The signal points are labelled as (X, Y) where X is the top squark mass and Y is the LSP mass in GeV. Furthermore, the signal over background ratios are displayed for the two signal points in squared brackets the respective event yields. }
+\makebox[\linewidth]{
+\begin{tabular}{lllllllllll}
+\multicolumn{11}{c}{} \\
+  \toprule
+    & total & [S/B] & SR1 & [S/B] & SR2 & [S/B] & SR3 & [S/B] & SR4 & [S/B] \\
+  \midrule
+   \ttbar & 16461 & & 13525 & & 754 & & 1868 & & 314 & \\
+   \WJets & 12481 & & 9660 & & 1516 & & 985 & & 320 & \\
+   \ZJets & 11837 & & 8155 & & 2425 & & 810 & & 447 & \\
+   QCD multijet & 20013 & & 19574 & & 0 & & 397 & & 42 & \\
+   \midrule
+   Signal (600, 50) & 1012 & [16.6$\cdot 10^{-3}$] & 416 & [8.2$\cdot 10^{-3}$] & 389 & [82.8$\cdot 10^{-3}$] & 101 & [24.9$\cdot 10^{-3}$] & 106 & [94.6$\cdot 10^{-3}$]  \\
+   Signal (1100, 50) & 29 & [0.5$\cdot 10^{-3}$] & 2 & [0.05$\cdot 10^{-3}$] & 8 & [1.7$\cdot 10^{-3}$] & 3 & [0.7$\cdot 10^{-3}$] & 16 & [14.0$\cdot 10^{-3}$]  \\
+  \bottomrule
+\end{tabular}}
+\label{tab:stop_baseline_cutflow}
+\end{table}   
+\\
+Based on the selected event yields and the estimated uncertainties, the 95\% confidence-level expected upper limit is calculated as an asymptotic $\mathrm{CL_s}$ limit~\cite{bib:theta}. The obtained exclusion curve is shown in Fig.~\ref{fig:stop_baseline_limit} for the signal strength $\mu$ which is the excluded production cross section divided by the theoretical cross section for direct stop production as a function of the stop quark mass. The LSP mass is fixed to 50\gev in order to study the sensitivity of the selection for signal scenarios with large mass splittings between stop and neutralino mass. A particular mass point can be excluded if the expected limit drops below one. As expected from the signal to background ratios, this baseline selection cuts and the subsequent binning in exclusive search regions is not yet sensitive enough to probe any of the selected mass points. Thus, possible improvements of the analysis are discussed in the following sections.  
 \begin{figure}[!h]
   \centering
   \begin{tabular}{c}
@@ -181,18 +184,21 @@ Based on the selected event yields and the estimated uncertainties, the 95\% con
 
 \section{Sensitivity Improvement using B Tagging}
 \label{sec:stop_btagging}
-As illustrated in Fig.~\ref{fig:T2tt}, the targeted signal final state involves the presence of bottom quarks emerging from the decay of the top quarks. Thus, an obvious option to enhance the sensitivity of such an analysis is to employ b-tagging techniques to identify the b quarks in the final state. Typical b-tagging algorithms for the identification of b-quark jets used within the CMS experiment have been discussed in Section~\ref{sec:btagging}. In this analysis, b-quark jets are identified based on the CSV algorithm using the medium working point. Furthermore, they are required to have \pt$> 30$\gev in order to be not sensitive to potentially large flavour-dependent JEC uncertainties for jet transverse momenta smaller than 30\gev. In Fig.~\ref{fig:stop_baseline_btag}, the b-tag multiplicity, \ie the number of b-tagged jets in the event is illustrated. \\ %As expected the maximum of this distribution for signal and \ttbar events is around two, since two b-quark jets are expected from the two decaying top quarks. \\ %Values above two or b-tagged jets in backgrounds not containing real b-quarks can be explained by the misidentification rate of the tagging algorithm. \\     
-The resulting distributions for \HT, \met and \NJets after requiring the presence of at least one b-tagged jet in the event are illustrated in Fig.~\ref{fig:stop_baseline_btag_HT_MET_NJets} in App.~\ref{app:stop}. It turns out that all backgrounds except for \ttbar can be significantly reduced when requiring the presence of at least one b-quark jet. This is expected, since the \ttbar background is the only background containing real b quarks.     
+As illustrated in Fig.~\ref{fig:T2tt}, the targeted signal final state involves the presence of bottom quarks emerging from the decay of the top quarks. Thus, an obvious option to enhance the sensitivity of such an analysis is to employ b-tagging techniques to identify the b quarks in the final state. Typical b-tagging algorithms for the identification of b-quark jets used within the CMS experiment have been discussed in Section~\ref{sec:btagging}. \\
+In this analysis, b-quark jets are identified based on the CSV algorithm using the medium working point. Furthermore, they are required to have \pt$> 30$\gev in order to be not sensitive to potentially large flavour-dependent JEC uncertainties for jet transverse momenta smaller than 30\gev. In Fig.~\ref{fig:stop_baseline_btag}, the b-tag multiplicity, \ie the number of b-tagged jets in the event, is illustrated.  %As expected the maximum of this distribution for signal and \ttbar events is around two, since two b-quark jets are expected from the two decaying top quarks. \\ %Values above two or b-tagged jets in backgrounds not containing real b-quarks can be explained by the misidentification rate of the tagging algorithm. \\ 
+When imposing in addition to the baseline selection also a requirement of at least one b-tagged jet, the total signal efficiencies for the signal samples with stop masses of 600\gev and 1100\gev decrease from around 30\% and 48\% to 25\% and 38\%, respectively. However, also the total background efficiency decreases significantly from $1.2 \cdot 10^{-7}$ to $3.6 \cdot 10^{-8}$. Concerning background events, the main reduction occurs for \WJets, \ZJets and QCD events as these contain in most cases no b-tagged jet. The relative background composition after applying the b-tag requirement is: 77.5\% \ttbar, 8.8\% \WJets, 8.6\% \ZJets and 5.1\% QCD.        
 \begin{figure}[!t]
   \centering
   \begin{tabular}{c}
-                \includegraphics[width=0.49\textwidth]{figures/Stop_DeltaPhiSelection_N_jets_btagged.pdf} 
+                \includegraphics[width=0.49\textwidth]{figures/Stop_DeltaPhiSelection_N_jets_btagged.pdf}% &
+       %         \includegraphics[width=0.49\textwidth]{figures/Stop_BTag_MET.pdf}   
   \end{tabular}
   \caption{B-tag multiplicity after applying the baseline selection in simulated events. The signal points are labelled as (X, Y) where X is the top squark mass and Y is the LSP mass in GeV.}
   \label{fig:stop_baseline_btag}
 \end{figure}
 \\
-Consequently, the expected exclusion reach of the analysis is expected to improve when applying the b-tag requirement in addition to the baseline selection. The same exclusive search regions as defined in Tab.~\ref{tab:stop_excl_search_bins} are used considering the same total uncertainties as described in Sec.~\ref{sec:stop_baseline} for a performance comparison of this improved selection with respect to the baseline requirements. The expected limits for the baseline selection (= B.) including the additional b-tag requirement are shown in Fig~\ref{fig:stop_baselinebtag_limit}. It turns out that the b-tag requirement significantly improves the sensitivity of the analysis towards the specified top squark mass range. Especially lower masses could be tested with such an analysis strategy. However, since the focus of this analysis is put on higher stop quark masses, it is discussed in the next section how this mass range can be adressed better.  
+Due to the improved signal to background ratios, also the expected exclusion limit of the analysis is expected to improve when applying the b-tag requirement in addition to the baseline selection. The same exclusive search regions as defined in Tab.~\ref{tab:stop_excl_search_bins} are used considering the same total uncertainties as described in Sec.~\ref{sec:stop_baseline} for a performance comparison of this improved selection with respect to the baseline requirements. The expected limit for the baseline selection (= B.) including the additional b-tag requirement is shown in Fig~\ref{fig:stop_baselinebtag_limit}. \\
+It turns out that the b-tag requirement significantly improves the sensitivity of the analysis towards the specified top squark mass range. Especially lower masses could be tested with such an analysis strategy. However, since the focus of this analysis is put on higher stop quark masses, it is discussed in the next section how this mass range can be adressed better.  
 \begin{figure}[!h]
   \centering
   \begin{tabular}{c}
@@ -241,8 +247,19 @@ Often, in analyses based on top quarks with moderate transverse momenta that suf
   \caption{Top tag multiplicity for the CMS top tagger (\textit{left}) and the HEP top tagger (\textit{right}) after application of the baseline selection. Only CA-jets of the corresponding jet size with a transverse momentum above 150\gev are considered.}
   \label{fig:stop_top_tag_multi}
 \end{figure} 
-The impact on the analysis when applying top tag requirements can be studied when looking for instance at the top tag multiplicity. In Fig.~\ref{fig:stop_top_tag_multi}, the top tag multiplicity is shown for the CMS top tagger (left) and the HEP top tagger (right) after the application of the baseline selection. Here, only CA-jets of the corresponding jet size with a transverse momentum above 150\gev are considered, since the taggers are not supposed to be efficient for smaller momenta. The distributions exhibit that, although a significant amount of signal events does not have a CA-jet identified as top-jet by the respective algorithm, the background can be significantly reduced when requiring at least one top-tagged jet. In general, the signal efficiencies with one or two top tags is larger when using the HEP top tagger than for the CMS tagger, but also the number of background events from \ttbar shows a larger value for the HEP top tagger case since more \ttbar events with lower top transverse momenta are selected. \\
-In order to test the impact of the top tagging requirement on the search sensitivity, the expected limits are derived again based on the search regions defined in Tab.~\ref{tab:stop_excl_search_bins} with the same uncertainties as assumed in Sec.~\ref{sec:stop_baseline}. The results are illustrated in Fig~\ref{fig:stop_baselinetoptag_limit}. 
+The impact on the analysis when applying top tag requirements can be studied when looking for instance at the top tag multiplicity. In Fig.~\ref{fig:stop_top_tag_multi}, the top tag multiplicity is shown for the CMS top tagger (left) and the HEP top tagger (right) after the application of the baseline selection. Here, only CA-jets of the corresponding jet size with a transverse momentum above 150\gev are considered, since the taggers are not supposed to be efficient for smaller momenta. \\
+The distributions exhibit that, although a significant amount of signal events does not have a CA-jet identified as top-jet by the respective algorithm, the background can be significantly reduced when requiring at least one top-tagged jet. The respective signal and background efficiencies, when using in addition to the baseline selection a requirement of at least one top-tagged jet, evolve as follows when considering the total efficiencies not separated according to the individual search regions:
+\begin{itemize}
+ \item HEP top tagger: \\
+$\epsilon_\mathrm{sig}^\mathrm{m_{\tilde{t}} = 600\gev}$ = 12\%, $\epsilon_\mathrm{sig}^\mathrm{m_{\tilde{t}} = 1100\gev}$ = 13\% \\
+$\epsilon_\mathrm{bg}^\mathrm{total}$ = $1.1 \cdot 10^{-6}$\% , $\epsilon_\mathrm{bg}^\mathrm{\ttbar}$ = 0.03\% 
+ \item CMS top tagger: \\
+$\epsilon_\mathrm{sig}^\mathrm{m_{\tilde{t}} = 600\gev}$ = 8\%, $\epsilon_\mathrm{sig}^\mathrm{m_{\tilde{t}} = 1100\gev}$ = 14\% \\
+$\epsilon_\mathrm{bg}^\mathrm{total}$ = $0.5 \cdot 10^{-6}$\% , $\epsilon_\mathrm{bg}^\mathrm{\ttbar}$ = 0.01\% 
+\end{itemize}
+In general, the signal efficiencies for low masses is larger when using the HEP top tagger than for the CMS top tagger and comparable for the higher stop mass. However, also the background efficiency shows a larger value for the HEP top tagger case and in particular more \ttbar events are selected. Thus, the CMS top tagger is expected to provide a better search sensitivity. \\
+In order to test the impact of the top tagging requirements on the search sensitivity more quantitatively, the expected limits are derived again based on the search regions defined in Tab.~\ref{tab:stop_excl_search_bins} with the same uncertainties as assumed in Sec.~\ref{sec:stop_baseline}. The results are illustrated in Fig~\ref{fig:stop_baselinetoptag_limit}. As expected, for the HEP top tagger as well as for the CMS top tagger the usage of a top tag requirement in addition to the baseline selections significantly improves the search sensitivity. The improvement amounts to a factor of two to three. Hence, mass points up to ($m_{\tilde{t}}, m_\mathrm{LSP}$) = (700, 50)\gev or even (800, 50)\gev can be probed with such selections. This selection is also more sensitive than the result obtained when adding a b-tag requirement as discussed in Sec.~\ref{sec:stop_btagging} which allows to probe stop masses around 600\gev for an LSP mass of 50\gev. In general, the selection based on the CMS top tagger performs better than the selection involving the HEP top tagger, since the signal to background ratio is higher as discussed above. \\
+Furthermore, the selections including the top tagging requirements are also compared when imposing an additional b-tag requirement, as defined in Sec.~\ref{sec:stop_btagging}. In both cases the b-tag requirement further improves the sensitivity. The selection involving the CMS top tagger still performs better. Thus, selections utilizing the HEP top tagger are not pursued in the following.% After the requirement of at least one top-tagged jet, \ttbar is the largest background contribution (in total \todo{\%}). Thus, it is of particular interest to identify kinematic selections that are specifically suited to reduce the \ttbar background, as discussed in the following section.
 \begin{figure}[!t]
   \centering
   \begin{tabular}{c}
@@ -251,13 +268,11 @@ In order to test the impact of the top tagging requirement on the search sensiti
   \caption{Expected 95\% upper limit for signal strength versus $m_{\tilde{t}}$. The LSP mass is chosen to be 50\gev.}
   \label{fig:stop_baselinetoptag_limit}
 \end{figure}
-It turns out that for the HEP top tagger as well as for the CMS top tagger the usage of a top tag requirement in addition to the baseline selections significantly improves the search sensitivity by a factor of two to three. Hence, mass points up to ($m_{\tilde{t}}, m_\mathrm{LSP}$) = (700, 50)\gev or even (800, 50)\gev can be probed. This selection is also better than the result obtained when adding a b-tag requirement as discussed in Sec.~\ref{sec:stop_btagging} which allows to probe stop masses around 600\gev for an LSP mass of 50\gev. In general, the selection based on the CMS top tagger performs better than the selection involving the HEP top tagger, since the signal to background ratio is higher as discussed above. \\
-Furthermore, the selections including the top tagging requirements are also compared when imposing an additional b-tag requirement, as defined in Sec.~\ref{sec:stop_btagging}. In both cases the b-tag requirement further improves the sensitivity. The selection involving the CMS top tagger still performs better. Thus, selections utilizing the HEP top tagger are not pursued in the following.% After the requirement of at least one top-tagged jet, \ttbar is the largest background contribution (in total \todo{\%}). Thus, it is of particular interest to identify kinematic selections that are specifically suited to reduce the \ttbar background, as discussed in the following section.
 
 \section{Performance Comparison of Various Kinematic Selections}
 \label{sec:stop_cuts}
 The sensitivity of the analysis targeting direct top squark production using the baseline requirements discussed in Sec.~\ref{sec:stop_baseline} can be improved already significantly when employing in addition b-tag and top-tag requirements, as shown in Sec.~\ref{sec:stop_btagging} and~\ref{sec:stop_btagging}. Nevertheless, the sensitivity might still be improved when imposing further kinematic selections. \\
-In order to address the specific kinematics of the various background contributions, first the background composition is studied. In Fig.~\ref{fig:stop_top_channels}, the background and signal processes are shown according to the decay mode of the process after the application of the baseline selection (left) and the baseline selection with an additional requirement of $\ge 1$ CMS top tag (right). These channels are defined according to the top quark properties based on generator information. The first channel includes all non-top backgrounds and the all-hadronic top decays. Channels two to four are the semi-leptonic top decays which contain electrons (channel two), muons (channel three) and tau leptons (channel four). The distributions exhibit that after the application of the top-tagging requirement the main background contribution arises from \ttbar events (in total \todo{\%}). Here, contributions from lost-leptons (channel two and three) and hadronically decaying tau leptons (channel four) occur in about equal amounts with slightly more hadronic tau events. \\
+In order to address the specific kinematics of the various background contributions, first the background composition is studied in more detail. In Fig.~\ref{fig:stop_top_channels}, the background and signal processes are shown according to the decay mode of the process after the application of the baseline selection (left) and the baseline selection with an additional requirement of $\ge 1$ CMS top tag (right). These channels are defined according to the top quark properties based on generator information. The first channel includes all non-top backgrounds and the all-hadronic top decays. Channels two to four are the semi-leptonic top decays which contain electrons (channel two), muons (channel three) and tau leptons (channel four). Dileptonic \ttbar events are not displayed, as these are found to be negligible. The distributions exhibit that after the application of the top-tagging requirement, similarly to the b-tag requirement, the main background contribution arises from \ttbar events (around 77\%). Here, contributions from lost-leptons (channel two and three) and hadronically decaying tau leptons (channel four) occur in about equal amounts with slightly more hadronic tau events. \\
 Since in general the number of events is small after application of the top tag requirement, kinematic selections and their performance are investigated when applying baseline selection criteria. Nonetheless, since \ttbar is known to be the largest background after top tagging, special emphasis is put on reducing the \ttbar background contributions.
 \begin{figure}[!t]
 \centering
@@ -411,7 +426,7 @@ In order to compare the sensitivity of this selection to the selection with best
 \begin{figure}[!h]
   \centering
   \begin{tabular}{c}
-                \includegraphics[width=0.42\textwidth]{figures/limitplot4BinSel_BaselineTopTagTransverseMassRef_LSP50.pdf} 
+                \includegraphics[width=0.49\textwidth]{figures/limitplot4BinSel_BaselineTopTagTransverseMassRef_LSP50.pdf} 
   \end{tabular}
   \caption{Expected 95\% upper limit for signal strength versus $m_{\tilde{t}}$. The LSP mass is chosen to be 50\gev.}
   \label{fig:stop_baselinetoptagref_limit}
